--- a/Examples/Examples.csproj
+++ b/Examples/Examples.csproj
@@ -22,4 +22,13 @@
     <ProjectReference Include="..\Days\Days.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Inputs\Day1\ExampleA.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Inputs\Day1\ExampleB.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
